# fadhilmayati

./: .gitignore  README.md  youtube.py
docs/: dompet_mvp_plan.md  week3-4_delivery.md
dompet_backend/: pyproject.toml
dompet_backend/app/: __init__.py  main.py
dompet_backend/app/api/: __init__.py  auth.py  beta.py  connectors.py  conversation.py  dependencies.py  ingestion.py  insights.py
dompet_backend/app/core/: config.py
dompet_backend/app/models/: __init__.py  auth.py  beta.py  connector.py  conversation.py  transaction.py
dompet_backend/app/services/: __init__.py  analytics.py  auth.py  beta.py  connectors.py  conversation.py  database.py  ingestion.py  insights.py
dompet_backend/tests/: test_auth.py  test_beta.py  test_connectors.py  test_conversation.py  test_ingestion.py  test_insights.py
frontend/: README.md  package.json  tsconfig.json
frontend/src/: index.ts
frontend/src/design-system/: README.md  index.ts  styles.css  tokens.ts
frontend/src/design-system/components/: AppShell.tsx  Avatar.tsx  Button.tsx  Card.tsx  Input.tsx  Text.tsx
frontend/src/features/auth/: biometric.ts  index.ts  magicLink.ts  supabaseClient.ts
