[project]
name = "dompet-backend"
version = "0.1.0"
description = "MVP backend for Dompet personal finance agent"
authors = ["Dompet Team <team@dompet.app>"]
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",
    "pandas>=2.1",
    "sqlmodel>=0.0.14"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
